--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
 <html>
-    <head> <title>This is the title</title></head>
-    
+	<head>
+		<meta charset="utf-8">
+		<title>Viv Developer - Portfolio</title>
+	</head>
 <body>
-    <h1>This is a test page</h1>
+	<h1>Hello World! I am a Web Developer.</h1>
+	<main>
+		<p>Hello, is it me you’re looking for?</p>
+	</main>
 </body>
-    </html>
+</html>
